# BloonsTD6Server

./: .clang-format  CMakeLists.txt  README.md
cmake/: file_locations.cmake  mingw-w64.cmake
cmake/Modules/: CheckPackages.cmake  CommonConfiguration.cmake  FindSystemd.cmake
docs/multiplayerServerProtocol/: header.md
docs/server/: Endpoints.md  ProxyFlow.md
platform/: CMakeLists.txt
platform/linux/: CMakeLists.txt
platform/linux/cgroup/: cgroup.py  onStart.sh.in
platform/linux/systemd/: btd6cgroupctrl.service.in  btd6cgroupctrl.socket.in
platform/windows/: CMakeLists.txt
src/: ApiEndpoint.cpp  ApiEndpoint.h  ApiProxy.cpp  ApiProxy.h  Bloons.cpp  Bloons.h  CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  ConfigFile.cpp  ConfigFile.h  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  Console.cpp  Console.h  Cosmetics.cpp  Cosmetics.h  Endpoint.cpp  Endpoint.h  ExternalMessage.cpp  ExternalMessage.h  GameConfig.cpp  GameConfig.h  GameInstance.cpp  GameInstance.h  Hmac.cpp  Hmac.h  LobbyMessage.cpp  LobbyMessage.h  Message.cpp  Message.h  MessagePart.h  MessageTemplates.cpp  MonkeyKnowledge.h  MultiplayerMessages.cpp  MultiplayerMessages.h  MultiplayerServer.cpp  MultiplayerServer.h  (+18 more)
src/api/: Api.cpp  Api.h  CMakeLists.txt
src/db/: CMakeLists.txt  PlayerData.cpp  PlayerData.h  PlayerDb.cpp  PlayerDb.h
src/server/: CMakeLists.txt  api_config.cpp  api_config.hpp  api_proxy.cpp  api_proxy.hpp  error.cpp  error.hpp  listener.cpp  listener.hpp  main.cpp  session.cpp  session.hpp
test/: CMakeLists.txt
test/config_test/: CMakeLists.txt  load_test.cpp  test_api_response.txt  test_config.toml
